# FIFA

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-report.yml
data/: fixtures.example.json  fixtures.json  team_context.json  team_ratings.example.json  team_ratings.json
scripts/: evaluate_model.py  update_fixtures.py  update_ratings.py  update_team_context.py
src/fifa_arb_agent/: __main__.py  agent.py  config.py  evaluation.py  fixtures.py  models.py  polymarket.py  ratings.py  recommendations.py  report.py  score_model.py  storage.py  team_context.py  telegram.py  tournament.py
tests/: test_calibration.py  test_evaluation.py  test_market_matching.py  test_recommendations.py  test_report.py  test_score_model.py  test_telegram.py  test_tournament.py  test_update_fixtures.py  test_update_ratings.py  test_update_team_context.py
