[project]
name = "fifa-2026-arb-agent"
version = "0.1.0"
description = "Cron-friendly FIFA 2026 forecast and Polymarket probability scanner."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "respx>=0.21.1",
  "ruff>=0.5.0",
]

[project.scripts]
fifa-arb-agent = "fifa_arb_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fifa_arb_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
